# planner_playground

./: CMakeLists.txt  package.xml
config/: costmaps_plugins.yaml  description.xacro  global_costmap_test.yaml  nav.rviz  nav2.yaml  nav2_overrides.yaml  path.mcap  planner_server.yaml  ros2_control_overrides.yaml  test_navigation.xml  waypoints.yaml
launch/: test_planner.launch.py
scripts/: interactive_footprint.py  odom_publisher.py
src/: send_goal_manually.cpp  simulator.cpp  test_navigator_with_rviz_node.cpp  test_planner_with_rviz_node.cpp
